@@ -71,7 +71,7 @@ module Jekyll
     # Returns nothing
     def process(name)
       self.ext = File.extname(name)
-      self.basename = name.split('.')[0..-2].first
+      self.basename = name[0 .. -self.ext.length-1]
     end
 
     # Add any necessary layouts to this post
